# src

./: .gitignore  .pylintrc  Auto-Regression.ipynb  AutomateBoring_Scraping.py  CleaningUpFilesByExtension.py  DataCapstoneProject.py  EfficientFrontier.py  FundAnalysis.py  LICENCE  LinearRegression.py  MiscellaneousMathStuff.py  New_Fund_Analysis.py  README.md  README.txt  UdemyPythonStuff.py  __init__.py  cf_games_analysis.py  cf_wod_email.py  decorators.py  efficient_frontier.py  fibonacci.py  get_paths.py  githubQ1.py  global_tests.py  loadExcel.py  nearest_neighbours.py  passwordGenerator.bat  passwordGenerator.py  pp_utils.py  primes.py  pyproject.toml  requests.py  requirements.txt  scrapePrice.py  securities_analysis.py  setup.py  start.py  stationarity.py  utils.py  utils_date.py  (+3 more)
aialpha/: __init__.py
archive/: AutomateTheBoringStuff.py  FundAnalysis.py  PhysicsFormulas.py  PlayerAnalysis.py  hangman.py  plotly.py  plotting.py  requests.py
config/: cf_email.json  mongo.json  security_data.json
data/: example_data.csv  example_data_na.csv  fundList.csv  tickerNameMapping.csv
dataload/: database.py  stocks.py
db/: database.py
development/: CreateDirectories.py  FIFAPlayerAnalysis.py  MeasuringPerformance.py  New_Fund_Analysis.py  Quiz q.py  Random.py  UdemyPythonStuff.py  finance-database.py  fpl.py  hangman.py  holding_period_return.py  loadExcel.py  plotting.py  scrapePrice.py  workingWithPDFs.py
examples/: cinema_example (realpython).ipynb  octave_tips_tricks.m
import/: new_quotes.json  quotes_db.json
jupyter-notebooks/: Stationarity.ipynb  (+1 more)
(+94 files in other folders)
